--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<meta charset="utf-8">
 </head>
 <body>
+	<em>Current status: Alpha</em>
 	<h1>El Pasillo del Infierno</h1>
 	<h2>The revenge of the fridges</h2>
-	<h3></h3> <!-- Spanish, French, German -->
+	<h3><a href="index.es.html">Spanish</a></h3> <!-- Spanish, French, German -->
 	<iframe></iframe> <!-- Ads -->
-	<button></button> <!-- Play-->
-	<p>	</p> <!-- Description -->
+	<button href="game.html">Start playing</button> <!-- Play-->
+	<p>El Pasillo del Infierno is a place where you can find the horrors of the fridges</p> <!-- Description -->
 	<iframe></iframe> <!-- YouTube -->
 	<iframe></iframe> <!-- Disqus -->
 </body>
