--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 	<em>Current status: Alpha</em>
 	<h1>El Pasillo del Infierno</h1>
 	<h2>The revenge of the fridges</h2>
+	<p></p> <!-- Social Widgets -->
 	<h3><a href="index.es.html">Spanish</a></h3> <!-- Spanish, French, German -->
-	<iframe></iframe> <!-- Ads -->
+	<iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> <!-- Ads -->
 	<button href="game.html">Start playing</button> <!-- Play-->
 	<p>El Pasillo del Infierno is a place where you can find the horrors of the fridges</p> <!-- Description -->
 	<iframe></iframe> <!-- YouTube -->
-	<iframe></iframe> <!-- Disqus -->
+	<div id="disqus_thread"></div>
+    <p>
+		<script type="text/javascript">
+			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			var disqus_shortname = 'adrianarroyocallegithub'; // required: replace example with your forum shortname
+
+			/* * * DON'T EDIT BELOW THIS LINE * * */
+			(function() {
+				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			})();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+	</p>
 </body>
 </html>
