--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>El Pasillo del Infierno</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<em>Current status: Alpha</em>
@@ -11,9 +12,11 @@
 	<p></p> <!-- Social Widgets -->
 	<h3><a href="index.es.html">Spanish</a></h3> <!-- Spanish, French, German -->
 	<iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> <!-- Ads -->
-	<button href="game.html">Start playing</button> <!-- Play-->
+	<p class="button">
+		<a href="game.html">Start playing</a> <!-- Play-->
+	</p>
 	<p>El Pasillo del Infierno is a place where you can find the horrors of the fridges</p> <!-- Description -->
-	<iframe></iframe> <!-- YouTube -->
+	<!-- <iframe></iframe> YouTube -->
 	<div id="disqus_thread"></div>
     <p>
 		<script type="text/javascript">
