--- a/game.html
+++ b/game.html
@@ -8,16 +8,16 @@
 	<article id="main"></article>
 	<script>
 	(function() {
-		var three = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		var three = document.createElement('script'); three.type = 'text/javascript'; three.async = true;
 		three.src = "libs/three.js";
-		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(three);
 	})();
 	</script>
 	<script>
 	(function() {
-		var three = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-		three.src = "libs/physi.js";
-		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		var physi = document.createElement('script'); physi.type = 'text/javascript'; physi.async = true;
+		physi.src = "libs/physi.js";
+		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(physi);
 	})();
 	</script>
 	<script data-main="js/main" src="libs/require.js"></script>
