Light and floor

--- a/index.html
+++ b/index.html
@@ -33,5 +33,14 @@
 		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 	</p>
+	<h3>Credits</h3>
+	<ul>
+		<li><a href="http://plus.google.com/+AdriánArroyoCalle">Adrián Arroyo Calle</a> - Creator</li>
+		<li><a href="http://threejs.org">Three.js library</a> - 3D Engine</li>
+		<li><a href="https://github.com/chandlerprall/Physijs">Physijs library</a> - Physics wrapper</li>
+		<li><a href="https://github.com/kripken/ammo.js/">Ammo.js library</a> - Physics engine</li>
+		<li><a href="http://requirejs.org">RequireJS Library</a> - Source organizer</li>
+		<li><a href="http://opengameart.org">OpenGameArt</a> - Some textures</li>
+	</ul>
 </body>
 </html>
