--- a/game.html
+++ b/game.html
@@ -22,11 +22,19 @@
 		font-size: 20px;
 		background-color: black;
 	}
+	#scope{
+		position: relative;
+		margin-top: auto;
+		margin-bottom: auto;
+		width: 50%;
+		height: 50%;
+	}
 	</style>
 </head>
 <body>
 	<article id="main"></article>
 	<p id="MessageBox"></p>
 	<script data-main="js/main" src="libs/require.js"></script>
+	<img id="scope" src="img/scope.png">
 </body>
 </html>
