--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<li><a href="https://github.com/kripken/ammo.js/">Ammo.js library</a> - Physics engine</li>
 		<li><a href="http://requirejs.org">RequireJS Library</a> - Source organizer</li>
 		<li><a href="http://opengameart.org">OpenGameArt</a> - Some textures</li>
+		<li><a href="http://google.com/?q=Andrey_Avkhimovich">Andrey Avkhimovich</a> - Music</li>
 	</ul>
 </body>
 </html>
