Walls and movements

--- a/game.html
+++ b/game.html
@@ -35,6 +35,6 @@
 	<article id="main"></article>
 	<p id="MessageBox"></p>
 	<script data-main="js/main" src="libs/require.js"></script>
-	<img id="scope" src="img/scope.png">
+	<!-- <img id="scope" src="img/scope.png"> -->
 </body>
 </html>
