--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<em>Current status: Alpha</em>
+	<em>Current status: 1.0</em>
 	<h1>El Pasillo del Infierno</h1>
 	<h2>The revenge of the fridges</h2>
 	<p></p> <!-- Social Widgets -->
-	<h3><a href="index.es.html">Spanish</a></h3> <!-- Spanish, French, German -->
+	<!-- <h3><a href="index.es.html">Spanish</a></h3> --> <!-- Spanish, French, German -->
 	<iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> <!-- Ads -->
 	<p class="button">
 		<a href="game.html">Start playing</a> <!-- Play-->
