Facebook Bugs and BitCoin image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>El Pasillo del Infierno</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/index.css">
-	<script src="http://coinwidget.com/widget/coin.js"></script>
 	<meta name="application-name" content="El Pasillo del Infierno"/>
 	<meta name="msapplication-TileColor" content="#550000"/>
 	<meta name="msapplication-square70x70logo" content="icons/tiny.png"/>
@@ -14,12 +13,13 @@
 	<link rel="apple-touch-icon" href="icons/square.png">
 	<link rel="apple-touch-startup-image" href="icons/wide.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link rel="shortcut icon" href="icons/tiny.png"/>
 </head>
 <body>
 	<em>Current status: 1.0</em>
 	<h1>El Pasillo del Infierno</h1>
 	<h2>The revenge of the fridges</h2>
-	<p><div class="g-plusone"></div><iframe src="https://www.facebook.com/plugins/like.php?api_key=113869198637480&channel_url=https%3A%2F%2Fs-static.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D28%23cb%3Df3969e5de9288be%26domain%3Ddevelopers.facebook.com%26origin%3Dhttps%253A%252F%252Fdevelopers.facebook.com%252Ff2a56d13199f3a8%26relation%3Dparent.parent&colorscheme=light&extended_social_context=false&href=http%3A%2F%2Fadrianarroyocalle.github.io%2Fel-pasillo-del-infierno&layout=button_count&locale=es_ES&node_type=link&sdk=joey&share=false&show_faces=false&width=90" style="wdith: 90px;overflow: hidden; border: none;"></iframe> <!-- Google+ -->
+	<p><div class="g-plusone"></div><iframe src="https://www.facebook.com/plugins/like.php?api_key=113869198637480&channel_url=https%3A%2F%2Fs-static.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D28%23cb%3Df3969e5de9288be%26domain%3Ddevelopers.facebook.com%26origin%3Dhttps%253A%252F%252Fdevelopers.facebook.com%252Ff2a56d13199f3a8%26relation%3Dparent.parent&colorscheme=light&extended_social_context=false&href=http%3A%2F%2Fadrianarroyocalle.github.io%2Fel-pasillo-del-infierno&layout=button_count&locale=es_ES&node_type=link&sdk=joey&share=false&show_faces=false&width=90" style="width: 100px; height: 20px;overflow: hidden; border: none;"></iframe> <!-- Google+ -->
 	<div><a href="http://www.tuenti.com/share" id="tuenti_share" class="tuenti-share-button"></a></div><div><a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a></div></p>
 	<!-- <h3><a href="index.es.html">Spanish</a></h3> --> <!-- Spanish, French, German -->
 	<iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> <!-- Ads -->
@@ -37,24 +37,14 @@
 				<input type="hidden" name="no_note" value="0">
 				<input type="hidden" name="currency_code" value="EUR">
 				<input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_LG.gif:NonHostedGuest">
-				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" style="border: 0;" name="submit" alt="PayPal - The safer, easier way to pay online!">
 				<img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
 		</form>
 	</div>
-	<script>
-	CoinWidgetCom.go({
-		wallet_address: "1A2j8CwiFEhQ4Uycsjhr3gQPbJxFk1LRmM"
-		, currency: "bitcoin"
-		, counter: "count"
-		, alignment: "bl"
-		, qrcode: true
-		, auto_show: false
-		, lbl_button: "Donate"
-		, lbl_address: "My Bitcoin Address:"
-		, lbl_count: "donations"
-		, lbl_amount: "BTC"
-	});
-	</script>
+	<div>
+		<p><img src="img/BitCoin168x64.png" alt="BitCoin accepted here"></p><!-- BitCoin image -->
+		<code>1A2j8CwiFEhQ4Uycsjhr3gQPbJxFk1LRmM</code>
+	</div>
 	<!-- <iframe></iframe> YouTube -->
 	<div id="disqus_thread"></div>
     <p>
