--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 		<p><img src="img/BitCoin168x64.png" alt="BitCoin accepted here"></p><!-- BitCoin image -->
 		<code>1A2j8CwiFEhQ4Uycsjhr3gQPbJxFk1LRmM</code>
 	</div>
+	<div>
+		<script id='fbuv0di'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=AdrianArroyoCalle&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbuv0di');</script>
+	</div>
 	<!-- <iframe></iframe> YouTube -->
 	<div id="disqus_thread"></div>
     <p>
