Changed icon path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="apple-touch-icon" href="icons/square.png">
 	<link rel="apple-touch-startup-image" href="icons/wide.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="shortcut icon" href="icons/tiny.png"/>
+	<link rel="shortcut icon" href="icons/ElPasilloDelInfierno_64.png"/>
 </head>
 <body>
 	<em>Current status: 1.0</em>
