--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>El Pasillo del Infierno</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/index.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 	<meta name="application-name" content="El Pasillo del Infierno"/>
 	<meta name="msapplication-TileColor" content="#550000"/>
 	<meta name="msapplication-square70x70logo" content="icons/tiny.png"/>
