--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 	<em>Current status: 1.0</em>
 	<h1>El Pasillo del Infierno</h1>
 	<h2>The revenge of the fridges</h2>
-	<p><div class="g-plusone"></div><iframe src="https://www.facebook.com/plugins/like.php?api_key=113869198637480&channel_url=https%3A%2F%2Fs-static.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D28%23cb%3Df3969e5de9288be%26domain%3Ddevelopers.facebook.com%26origin%3Dhttps%253A%252F%252Fdevelopers.facebook.com%252Ff2a56d13199f3a8%26relation%3Dparent.parent&colorscheme=light&extended_social_context=false&href=http%3A%2F%2Fadrianarroyocalle.github.io%2Fel-pasillo-del-infierno&layout=button_count&locale=es_ES&node_type=link&sdk=joey&share=false&show_faces=false&width=90" style="width: 100px; height: 20px;overflow: hidden; border: none;"></iframe> <!-- Google+ -->
-	<div><a href="http://www.tuenti.com/share" id="tuenti_share" class="tuenti-share-button"></a></div><div><a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a></div></p>
 	<!-- <h3><a href="index.es.html">Spanish</a></h3> --> <!-- Spanish, French, German -->
-	<iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> <!-- Ads -->
+	<!-- <iframe style="border: 0; width: 728px; height: 90px;overflow: hidden;" src="http://coinurl.com/get.php?id=18740"></iframe> --> <!-- Ads -->
 	<p class="button">
 		<a href="game.html">Start playing</a> <!-- Play-->
 	</p>
@@ -46,26 +44,6 @@
 		<p><img src="img/BitCoin168x64.png" alt="BitCoin accepted here"></p><!-- BitCoin image -->
 		<code>1A2j8CwiFEhQ4Uycsjhr3gQPbJxFk1LRmM</code>
 	</div>
-	<div>
-		<script id='fbuv0di'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=AdrianArroyoCalle&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fbuv0di');</script>
-	</div>
-	<!-- <iframe></iframe> YouTube -->
-	<div id="disqus_thread"></div>
-    <p>
-		<script type="text/javascript">
-			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-			var disqus_shortname = 'adrianarroyocallegithub'; // required: replace example with your forum shortname
-
-			/* * * DON'T EDIT BELOW THIS LINE * * */
-			(function() {
-				var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-				dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-			})();
-		</script>
-		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-	</p>
 	<h3>Credits</h3>
 	<ul>
 		<li><a href="http://plus.google.com/+AdriánArroyoCalle">Adrián Arroyo Calle</a> - Creator</li>
@@ -76,35 +54,5 @@
 		<li><a href="http://opengameart.org">OpenGameArt</a> - Some textures</li>
 		<li><a href="http://google.com/?q=Andrey_Avkhimovich">Andrey Avkhimovich</a> - Music</li>
 	</ul>
-	<script type="text/javascript">
-	(function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-	</script>
-	<script type="text/javascript">
-	(function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'http://widgets.tuenti.com/widgets.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-	</script>
-	<script type="text/javascript">
-	(function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'js/unity.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-	})();
-	</script>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-20035972-20', 'adrianarroyocalle.github.io');
-	ga('send', 'pageview');
-	</script>
 </body>
 </html>
